--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^2.4.1"
   },
   "dependencies": {
+    "config": "^3.3.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.7",
